styles/_editorjs.scss
@import './mixins';

.codex-editor {
  &__redactor {
    padding-bottom: 0 !important;
  }

  .ce-popover-item__icon {
    svg {
      width: unset;
      height: unset;
    }
  }

  & .ce-toolbar {
    z-index: 10;

    .ce-popover .ce-popover__item[data-item-name='quiz'] .ce-popover__item-icon svg {
      width: 16px;
      height: 16px;
    }
  }

  & .ce-block__content {
    max-width: unset;

    .ce-paragraph *:not(code) {
      background-color: transparent !important;
      font-family: inherit !important;
    }
  }

  .editorjs-codeFlask_Wrapper {
    .editorjs-codeFlask_LangDisplay {
      height: unset;
    }
    .editorjs-codeFlask_CopyButton {
      svg {
        fill: none;

        & path {
          stroke: black;
        }
      }
    }
  }

  .codeflask--has-line-numbers pre.codeflask__flatten {
    width: unset;
  }

  // styles for text color inline plugin
  .ce-inline-toolbar {
    .ce-inline-tool.colorPlugin {
      #color-left-btn {
        width: 20px;
      }
      #color-btn-text {
        height: unset;
        svg {
          height: 18px;
        }
      }
    }
  }

  .codeflask {
    &.codeflask--has-line-numbers:before,
    & .codeflask__lines {
      z-index: 4;
    }
  }
}

.readMode {
  .inline-image__picture img,
  img.image-tool__image-picture {
    cursor: zoom-in;
  }
}

.inline-code {
  background: rgba(240, 240, 240, 0.7) !important;
  color: black !important;
  padding: 3px 6px !important;
}

.editor-container,
.ce-toolbar__content {
  max-width: 820px;
  @include screenMin1200 {
    max-width: 880px;
  }
}

.editor-container {
  margin: 0 auto;
  position: relative;
  .ce-inline-toolbar {
    z-index: 4;
  }
}

.codex-editor__loader {
  display: none;
}

.ce-settings {
  @include screenMax576 {
    top: 40px;
    bottom: unset;
  }
}

#inline-image__modal {
  display: none !important;
}

.inline-image .inline-image__tab {
  cursor: default;

  &:hover {
    background: none;
  }
}

// styles for light theme
.theme-light .codex-editor {
  *:not(font):not(.token):not(code):not(.cdx-quiz-error) {
    color: inherit !important;
  }
}

// styles for dark theme
.theme-dark .codex-editor {
  *:not(font):not(.token):not(code):not(.cdx-quiz-error) {
    color: inherit !important;
    &:host {
      background-color: var(--popover-bg);
    }
    &::selection {
      background-color: var(--selected-text-bg);
    }
    &::-moz-selection {
      background-color: var(--selected-text-bg);
    }
  }

  .ce-inline-toolbar {
    background-color: var(--popover-bg);

    // inline toolbar tool buttons styles
    .ce-inline-tool,
    .ce-inline-toolbar__dropdown {
      &:hover {
        background-color: var(--lightBlack);
      }
    }

    .ce-inline-tool:not(.ce-inline-tool--active).colorPlugin {
      #color-btn-text {
        svg {
          fill: white;
        }
      }
    }

    // styles for gyperlink tool input
    .ce-inline-toolbar__actions input {
      background-color: transparent;
      border-radius: 0 0 10px 10px;
    }

    // inline toolbar 'CONVERT TO' popover styles
    .ce-conversion-toolbar {
      background-color: var(--popover-bg);

      .ce-conversion-tool {
        .ce-conversion-tool__icon {
          background-color: transparent;
        }
        &:hover {
          background-color: var(--lightBlack);
        }
      }
    }
  }

  .inline-image {
    .inline-image__picture--withBackground {
      background-color: transparent;
    }
  }

  // styling table plugin for dark mode
  .tc-wrap {
    .tc-popover {
      background-color: var(--popover-bg);
      z-index: 1;

      &__item-icon {
        background-color: var(--selected-text-bg);
      }
    }
    .tc-row--selected,
    .tc-cell--selected {
      background-color: var(--selected-text-bg);

      &::after {
        background-color: var(--selected-text-bg);
      }
    }

    .tc-toolbox__toggler {
      rect {
        fill: var(--popover-bg);
      }
    }
    .tc-add-column:hover,
    .tc-add-row:hover {
      background-color: var(--selected-text-bg);

      &::before {
        background-color: var(--selected-text-bg);
      }
    }
  }

  .editorjs-codeFlask_Wrapper {
    border: 0.5px solid;
    background-color: transparent;
    .editorjs-codeFlask_LangDisplay {
      background-color: transparent;
      border-top: 0.5px solid;
      border-left: 0.5px solid;
      padding: 2px 10px;
    }
    .editorjs-codeFlask_CopyButton {
      background-color: var(--popover-bg);
      border: 0.5px solid;

      svg path {
        stroke: #ffffff;
      }
    }
    .codeflask {
      &.codeflask--has-line-numbers {
        border-bottom: 2px solid transparent;

        &:before {
          background-color: var(--popover-bg);
          border-right: 0.5px solid;
          border-bottom: 0.5px solid;
        }
      }
      .token {
        &.function,
        &.keyword,
        &.selector,
        &.property,
        &.tag,
        &.attr-value,
        &.number {
          color: #6cb6ff;
        }
      }
    }
    .codeflask__textarea {
      caret-color: inherit;
      overflow-y: hidden;
      overflow-x: auto;

      &::-webkit-scrollbar {
        height: 0.4rem;
      }
      &::-webkit-scrollbar-track {
        background: transparent;
      }
      &::-webkit-scrollbar-thumb {
        background: rgb(162, 162, 162);
        border-radius: 1rem;
      }
    }
  }

  .cdx-alert {
    background-color: transparent;
  }

  .ce-toolbar {
    .ce-toolbar__actions {
      .ce-toolbar__plus:hover,
      .ce-toolbar__settings-btn:hover {
        background-color: transparent;
        border: 0.5px solid;
      }
    }

    .ce-settings__default-zone {
      text-align: center;
    }

    .ce-settings {
      background-color: var(--popover-bg);
      border-width: 0.5px;

      .cdx-settings-button:hover,
      .ce-settings__button:hover {
        background-color: var(--lightBlack);
      }

      .qt-settings-icon__single svg path {
        fill: white;
      }
    }

    .ce-popover {
      background-color: var(--popover-bg);
      border-width: 0.5px;

      .ce-popover-item {
        &:not(.ce-popover-item--confirmation):hover {
          background-color: var(--lightBlack);
        }

        &__icon {
          background-color: transparent;

          path {
            fill: white;
          }
        }
      }

      .nice-select .nice-select-search-box input {
        background-color: var(--popover-bg);
      }
    }

    .nice-select {
      $min-width: 118px;
      min-width: $min-width;
      width: 100%;
      background-color: var(--lightBlack);
      .nice-select-dropdown {
        background-color: var(--popover-bg);
        left: 50%;
        transform: translateX(-50%);
        min-width: $min-width;
      }
      .option {
        &:hover,
        &.focus {
          background-color: var(--lightBlack);
        }
      }
    }
  }

  .ce-block--selected .ce-block__content {
    background-color: var(--popover-bg);
  }

  .image-tool {
    --bg-color: transparent;
    &.image-tool--loading .image-tool__image {
      background-color: transparent;
    }
  }

  .codex-editor__redactor {
    .cdx-block.inline-image {
      & > .inline-image__control-panel {
        box-shadow: none;
      }
      .inline-image__control-panel {
        border: 1px solid lightgrey;
        .panel-scroll {
          &::-webkit-scrollbar {
            width: 0.5rem;
          }

          &::-webkit-scrollbar-track {
            background: transparent;
          }

          &::-webkit-scrollbar-thumb {
            border-radius: 1rem;
            background: var(--scrollbar-thumb-color);
          }
        }

        .inline-image__image-gallery {
          background-color: transparent;
        }
      }
    }
  }

  .quiz-tool-container {
    .quiz-item .icon-button:hover,
    .quiz-footer .qt-add-btn:hover {
      background-color: var(--popover-bg);
    }

    .quiz-item__hoverable:hover {
      background-color: var(--popover-bg);
    }
  }
}

